--- a/src/main/resources/templates/wmsWarehouse.html
+++ b/src/main/resources/templates/wmsWarehouse.html
@@ -659,7 +659,7 @@
     <tbody class="bg-white divide-y divide-gray-200">
         ${materials.map(mat => `
         <tr>
-            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${mat.material_id}</td>
+            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${mat.material_code}</td>
             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${mat.material_name || 'N/A'}</td>
             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${mat.quantity}</td>
         </tr>
