--- a/src/main/resources/templates/reDoc.html
+++ b/src/main/resources/templates/reDoc.html
@@ -9,10 +9,10 @@
 <!-- 创建一个容器，其中 ReDoc 将会渲染文档 -->
 <!--<redoc spec-url='http://47.236.10.165:8080/apps/wenhao-javaw/v2/api-docs'></redoc>-->
 <!--<redoc spec-url='http://192.168.31.223:8080/apps/wenhao-javaw/v2/api-docs'></redoc>-->
-<redoc spec-url='/v2/api-docs'></redoc>
+<redoc spec-url='http://office.unibutton.com:6585/v2/api-docs'></redoc>
 <script>
     // Redoc.init('http://192.168.31.223:8080/apps/wenhao-javaw/v2/api-docs');
-    Redoc.init('/v2/api-docs');
+    Redoc.init('http://office.unibutton.com:6585/v2/api-docs');
     // Redoc.init('http://47.236.10.165:8080/apps/wenhao-javaw/v2/api-docs');
 </script>
 </body>
