--- a/src/main/resources/templates/flowManagement.html
+++ b/src/main/resources/templates/flowManagement.html
@@ -357,6 +357,18 @@
                     "<a href='http://47.236.10.165:8080/apps/wenhao-javaw/llm' target='_blank' class='open-btn text-gray-600 hover:text-gray-900'><i class='fas fa-external-link-alt'></i></a></span>"
             },
             {
+                "name": "<a href='http://47.236.10.165:8080/apps/wenhao-javaw/llm2' target='_blank'>langchain</a>",
+                "description": "langchain大语言",
+                "type": "基础应用",
+                "edges": 1,
+                "cores": 2,
+                "apps": 1,
+                "updateTime": "25/01/2024",
+                "createTime": "25/01/2024",
+                "actions": "<a href='#' class='edit-btn text-indigo-600 hover:text-indigo-900'>Edit</a> <span style='margin-left: 8px;'>" +
+                    "<a href='http://47.236.10.165:8080/apps/wenhao-javaw/llm2' target='_blank' class='open-btn text-gray-600 hover:text-gray-900'><i class='fas fa-external-link-alt'></i></a></span>"
+            },
+            {
                 "name": "<a href='https://demo.unibutton.com:8443/grafana' target='_blank'>grafana</a>",
                 "description": "监控",
                 "type": "基础应用",
@@ -451,6 +463,18 @@
                 "createTime": "25/01/2024",
                 "actions": "<a href='#' class='edit-btn text-indigo-600 hover:text-indigo-900'>Edit</a> <span style='margin-left: 8px;'>" +
                     "<a href='http://47.236.10.165:8080/apps/wenhao-javaw/redoc' target='_blank' class='open-btn text-gray-600 hover:text-gray-900'><i class='fas fa-external-link-alt'></i></a></span>"
+            },
+            {
+                "name": "<a href='http://47.236.10.165:8080/apps/wenhao-javaw/warehouse' target='_blank'>carbonWms</a>",
+                "description": "carbonWms",
+                "type": "综合系统展示",
+                "edges": 1,
+                "cores": 2,
+                "apps": 1,
+                "updateTime": "25/01/2024",
+                "createTime": "25/01/2024",
+                "actions": "<a href='#' class='edit-btn text-indigo-600 hover:text-indigo-900'>Edit</a> <span style='margin-left: 8px;'>" +
+                    "<a href='http://47.236.10.165:8080/apps/wenhao-javaw/warehouse' target='_blank' class='open-btn text-gray-600 hover:text-gray-900'><i class='fas fa-external-link-alt'></i></a></span>"
             },
             {
                 "name": "<a href='http://47.236.10.165:8080/apps/wenhao-javaw/swagger-ui.html' target='_blank'>swagger</a>",
