--- a/src/main/resources/templates/llm.html
+++ b/src/main/resources/templates/llm.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat Window</title>
-    <link href="apps/wenhao-javaw/output.css" rel="stylesheet">
+    <link href="output.css" rel="stylesheet">
     <!--    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">-->
 </head>
 <body class="flex flex-col justify-center items-center bg-gray-100 h-screen">
