--- a/src/main/resources/templates/wms.html
+++ b/src/main/resources/templates/wms.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <title>Openiot Configuration Board</title>
-        <link href="apps/wenhao-javaw/output.css" rel="stylesheet">
-    <!--    <link href="../static/apps/wenhao-javaw/output.css" rel="stylesheet">-->
+        <link href="output.css" rel="stylesheet">
+    <!--    <link href="../static/output.css" rel="stylesheet">-->
 <!--    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"></link>
     <style>
@@ -26,7 +26,7 @@
     <div class="flex items-center">
         <a href="#" class="text-lg mr-4"><i id="navIcon" class="fas fa-bars fa-lg ml-3"></i></a>
         <a href="#" class="flex items-center">
-            <img alt="Your Logo" src="http://office.unibutton.com:59000/wenhao/2024-02/22/1ac8effc-c054-434a-9167-e00f4cdc3725.png" class="logo mr-2 h-12 w-12"/>
+            <img alt="Your Logo" src="vegetabledog/logo.png" class="logo mr-2 h-12 w-12"/>
             <span class="text-xl font-semibold">Vegetable</span>
         </a>
         <a href="#" class="ml-6 text-sm font-medium text-gray-700 hover:text-gray-900">Home</a>
@@ -460,13 +460,13 @@
     <div class="relative p-5 border w-96 shadow-lg rounded-md bg-white">
         <!-- 放大的 Logo 图片 -->
         <img id="enlargedLogo"
-             src="http://office.unibutton.com:59000/wenhao/2024-02/22/1ac8effc-c054-434a-9167-e00f4cdc3725.png"
+             src="vegetabledog/logo.png"
              alt="Enlarged Logo" class="rounded-lg"/>
     </div>
 </div>
 
 <script>
-    //npx tailwindcss -i ./src/main/resources/static/apps/wenhao-javaw/input.css -o ./src/main/resources/static/apps/wenhao-javaw/output.css --watch
+    //npx tailwindcss -i ./src/main/resources/static/apps/wenhao-javaw/input.css -o ./src/main/resources/static/rapps/wenhao-javaw/output.css --watch
     // 获取所有的图标按钮
     const iconButtons = document.querySelectorAll('.icon-button');
 
